cluster/apps/networking-system/ingresses/base/authelia/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.${SECRET_DOMAIN_0}`)
      services:
        - name: authelia
          port: 9091
          namespace: authentication-system
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
